# CS-253-P4-Tests

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  runTests.sh
Shifted_All/: expected.txt
noChange/: expected_code (copy).txt
offset/: expected.txt
scale/: input2.txt  result.txt
scaleOffset/: expected.txt
testcase0_p1example/: result.txt
testcase2_novelinput/: result.txt
